2021-11-22 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-21 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-20 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug-3129 z80 on FreeBSD 13 regression.

2021-11-19 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Use SM83 ldh in code generation.

2021-11-18 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-18 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Fix bug #3296.

2021-11-17 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Infrastructure for optimization for code speed.
	* support/regression/ports/ez80-z80/spec.mk,
	  support/regression/ports/ucr2k/spec.mk,
	  support/regression/ports/ucr2ka/spec.mk:
	  Do not use no-longer-existing --profile in regtests.

2021-11-16 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/z80/gen.c,
	  src/z80/mappings.i,
	  doc/sdccman.lyx,
	  .version:
	  Remove profiling support.

2021-11-16 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Rematerialization of stack locations.

2021-11-16 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Preparations for the rematerialization of stack locations.

2021-11-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/atomic_flag_clear.c: